# oats

./: .gitignore  Cargo.toml  README.md  mix.exs
.github/workflows/: ci.yml  docs.yaml  safety.yml
docs/: go.mod  hugo.yaml  inspiration.md
docs/content/: _index.md
docs/public/: index.html  index.xml
docs/public/about/: index.html
docs/public/categories/: index.html  index.xml
docs/public/docs/: index.html  index.xml
docs/public/docs/first-page/: index.html
docs/public/docs/folder/: index.html  index.xml
docs/public/docs/folder/leaf/: index.html
docs/public/tags/: index.html  index.xml
lib/: oats.ex
lib/oats/: data_frame.ex  query.ex  repo.ex  series.ex
native/oats/: Cargo.toml  README.md
native/oats/src/: bag.rs  duplicate_bag.rs  ets.rs  lib.rs  oats.rs  ordered_set.rs  set.rs
native/oats/src/query/pam/: match_spec.rs  pam.rs
notebook/: oats_txn.livemd
test/: add_SUITE.erl  ets_SUITE.erl  ets_TOUGH_SUITE.erl  ets_property_test_SUITE.erl  oats_ex_test.exs
