[package]
name = "oats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
arrow = "52.2.0"
cargo-fuzz = "0.12.0"
criterion = "0.5.1"
crossbeam = "0.8.4"
crossbeam-epoch = "0.9.18"
dashmap = "5.5.3"
datafusion = "41.0.0"
futures = "0.3.30"
hashbrown = "0.13"
object_store = "0.11.0"
proptest = "1.4.0"
quickcheck = "1.0.3"
zerocopy = "0.8.0-alpha"
zerocopy-derive = "0.8.0-alpha"
