[package]
name = "oats"
version = "0.1.0"
authors = ["Haile Lagi"]
edition = "2021"

[lib]
name = "oats"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.24.0"
anyhow = "1.0.79"
cargo-fuzz = "0.12.0"
criterion = "0.5.1"
crossbeam = "0.8.4"
crossbeam-epoch = "0.9.18"
dashmap = "5.5.3"
datafusion = "41.0.0"
futures = "0.3.30"
hashbrown = "0.13"
object_store = "0.11.0"
proptest = "1.4.0"
quickcheck = "1.0.3"
tokio = "1.41.0"
parking_lot = "0.12.3"
